# peek-again

./: Cargo.toml  LICENSE  README.md
.github/workflows/: kani.yml
analysis/: lib-no-pad.ll  lib.ll  lib.s  prior.s
analysis/new/: lib.s  no_pad_with_align_CURRENT.s  std_analysis.rs  std_analysis.s
benches/: next_if.rs  peek.rs  peek_2.rs  pipeline_bubble.rs  vs_std.rs
dot/: empty_next_if.dot  once_next_if.dot  twice_next_if.dot
proptest-regressions/: lib.txt
src/: .lib.rs.swp  lib.rs
