[package]
name = "peek-again"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"

[profile.release]
lto = true
opt-level=3

[[bench]]
name = "vs_std"
harness = false

[[bench]]
name = "peek_2"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
