[package]
name = "peek-again"
version = "0.5.2"
edition = "2021"
authors = ["Clelland Green <cg@ironvelo.com>"]
description = "A performant iterator providing double peek functionality."
repository = "https://github.com/CleveGreen/peek-again"
documentation = "https://docs.rs/peek_again/latest/peek_again"
homepage = "https://github.com/CleveGreen/peek-again"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "peek", "no_std"]
categories = ["algorithms", "rust-patterns", "no-std", "no-std::no-alloc"]
readme = "README.md"

[features]
allow-unsafe = []

[dev-dependencies]
# criterion = "0.5.0"
proptest = "1.5.0"

[profile.release]
lto = true
opt-level = 3

[profile.bench]
lto = true
opt-level = 3
debug = true
debug-assertions = false

[[bench]]
name = "vs_std"
harness = false

[[bench]]
name = "next_if"
harness = false

[[bench]]
name = "peek_2"
harness = false

[[bench]]
name = "pipeline_bubble"
harness = false

[[bench]]
name = "peek"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
